# catalog

./: .claudeignore  .dockerignore  .editorconfig  .env.example  .gitignore  404.html  CLAUDE.md  Makefile  README.md  api.py  app.py  compose.yml  crawlers.py  embedding.analysis.md  enhancements.md  fork-workflow.md  harvester.py  index.html  main.py  mkdocs.yml  pgai.migration.md  pgai.plan.md  pyproject.toml  pytest.ini  query.py  recommendations.md  schema.py  schema.sql  search.html  verde_chat.py
architecture/: index.html
article-outline/: index.html
blog/: index.html
blog/posts/2026-03-04-agentic-tool-use/: index.html
blog/posts/2026-03-04-query-expansion/: index.html
catalog/: README.md  requirements.txt
catalog/docker/: docker-compose.yml
catalog/sql/: catalog.sql
catalog/src/: main.py
chat_app_gpt_example/: .env.example  __init__.py  backend.py  cli.py  web.py
crawlers/: crawlers.py  pyproject.toml
demos/: index.html
disclaimer/: index.html
docker/: compose.yaml  compose.yml  litellm_config.yaml
docker/pgsql/: compose.yml
docker/pgsql/data/pgdata/global/: 1260  pg_control  pg_internal.init
docs/: architecture.md  article-outline.md  demos.md  disclaimer.md  enhancements.md  index.md  introduction.md  metadata-architecture.md  methods.md  vision.md
docs/assets/casts/: ollama_query_demo.cast  semantic_query_demo.cast
docs/blog/: index.md
docs/blog/posts/: 2026-03-04-agentic-tool-use.md  2026-03-04-query-expansion.md
docs/extras/: styles.css
docs/search_methods/: bot.md  hybrid_search.md  simple.md
enhancements/: index.html
extras/: styles.css
harvester/: README.md  crawlers.py  main.py  pyproject.toml
helpers/: db.py  utils.py
hooks/: blog_index.py
introduction/: index.html
metadata-architecture/: index.html
methods/: index.html
search/: search_index.json
search_methods/bot/: index.html
search_methods/hybrid_search/: index.html
search_methods/simple/: index.html
slclient/: README.md  pyproject.toml  streamlit_app.py
src/catalog/: __init__.py  bots.py  cli.py  config.py  core.py  crawlers.py  lib.py  schema.py  search.py  tools.py  usfs.py
stylesheets/: extra.css
tests/: __init__.py  conftest.py  test_bots.py  test_cli.py  test_core.py  test_lib.py  test_schema.py  test_usfs.py
vision/: index.html
(+49 files in other folders)
