[project]
name = "harvester"
version = "0.1.0"
description = "USFS Metadata Harvester"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arrow>=1.3.0",
    "bs4>=0.0.2",
    "click>=8.2.1",
    "lxml>=6.0.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "ruff>=0.12.1",
]
